# customize_erpnext

./: IMPROVEMENTS_FINGERPRINT_SYNC.md  QR_LABEL_PRINT_README.md  README.md  create_material_issue_template.MD  pyproject.toml  requirements.txt  scratch.py
customize_erpnext/: __init__.py  doctype  hooks.py  hooks_backup_old.py  modules.txt  patches.txt  plan_promt.md  workspace_setup.md  workspace_setup.py
customize_erpnext/api/: __init__.py  _archived_sync_att_user_fingerprint.md  _archived_sync_att_user_fingerprint.py  api_endpoints.py  attendance_machines.py  biometric_auth.py  biometric_log_viewer.py  biometric_resync.py  biometric_sync.py  bom.py  export_import_custom_field.py  get_stock_by_invoice.py  hr_overview_cards.py  item_variants_after_insert.py  material_request.py  production_plan.py  purchase_request.py  qr_code.py  qr_label_print.py  site_restriction.md  site_restriction.py  sync_att_user_fingerprint.py  update_stock_ledger_invoice_number.py  utilities.js  utilities.py  work_order.py
customize_erpnext/desktop_icon/: biometric_sync.json  customize_erpnext.json  employee_photos.json  health_check_up.json  job_portal.json  qr_code_generator.json  readme.md  shoe_rack.json  sync_logs.json  tiqn_app.json
customize_erpnext/doc_events/: item.py
customize_erpnext/fixtures/: assignment_rule.json  custom_docperm.json  custom_field.json  desktop_icon.json  docperm.json  list_view_settings.json  print_format.json  property_setter.json  report.json  role.json  role_profile.json  split_print_format.md  split_print_format.py  workflow.json  workflow_state.json  (+4 more)
(+630 files in other folders)
